# robot_projects

./: README.md
2d_cluster_test/: CMakeLists.txt  main.cpp
2d_cluster_test/include/: cluster.h  data_container.h
2d_cluster_test/test_data/: laser_test_data2.txt
M1C1_Lidar/: CMakeLists.txt  README.md
M1C1_Lidar/include/: lock.h
M1C1_Lidar/samples/: CMakeLists.txt  main.cpp
M1C1_Lidar/src/: C_CSPC_Lidar.cpp  common.h  cspclidar_driver.cpp
apf_planner/: .main.cpp.swp  main.cpp
apf_planner/include/: .apf.h.swp  apf.h  apf_simulator.h
bottom_control_board/motor_pid_velocity_control/: battery.cpp  battery.h  dht11.cpp  dht11.h  imu.cpp  imu.h  motor.cpp  motor.h  motor_pid_velocity_control.ino  pid.cpp  pid.h  server.cpp  server.h  uart.cpp  uart.h  ultrasonic.cpp  ultrasonic.h  wifi.cpp  wifi.h
dnn_body_detect/: CMakeLists.txt
dnn_body_detect/include/: body_detect.h  image_utils.h
dnn_body_detect/include/dnn_node/: dnn_node.h  dnn_node_data.h  dnn_node_impl.h
dnn_body_detect/include/dnn_node/util/output_parser/: perception_common.h  utils.h
dnn_body_detect/include/dnn_node/util/output_parser/classification/: ptq_classification_output_parser.h
dnn_body_detect/include/dnn_node/util/output_parser/detection/: fasterrcnn_output_parser.h  fcos_output_parser.h  nms.h  ptq_efficientdet_output_parser.h  ptq_ssd_output_parser.h  ptq_yolo2_output_parser.h  ptq_yolo3_darknet_output_parser.h  ptq_yolo5_output_parser.h
dnn_body_detect/include/dnn_node/util/output_parser/segmentation/: ptq_unet_output_parser.h
dnn_body_detect/include/util/: image_proc.h
dnn_body_detect/include/util/threads/: threadpool.h
dnn_body_detect/src/: body_detect.cpp  image_utils.cpp  main.cpp  main.cpp_cpy2
global_planner/: CMakeLists.txt  main.cpp
global_planner/include/: laser_simulation.h  simulation.h
icp_test/: CMakeLists.txt  laser_data.txt  laser_data2.txt  laser_data3.txt  main.cpp
icp_test/include/: 2d_icp.h
jpeg_stream/: CMakeLists.txt  main.cpp  main.cpp_cpy  main.cpp_cpy3
jpeg_stream/include/: .data_transport.h.swp  data_transport.h  image_stream.h  image_utils.h
jpeg_stream/src/: EpollEvent.cpp
loop_closure_detection_simulation/: .slam_test.cpp.swo  data_transport.h  slam_test.cpp
loop_closure_detection_simulation/include/: .laserSimulation.h.swo  .laserSimulation.h.swp  .pose_graph_optimize.h.swo  .pose_graph_optimize.h.swp  2d_icp.h  KDTreeVectorOfVectorsAdaptor.h  data_container.h  kdtree_vector_eigen_adaptor.h  localization.h  loop_closure_detect.h  loop_closure_detect.h_cpy  nano_pgo.hpp  ndt_grid.h  pose_graph_optimize.h  slam_process.h  target_planner.h
m1c1_lidar_test/: CMakeLists.txt  REDME.md
m1c1_lidar_test/include/: data_transport.h  data_type.h  lidar_drive.h
m1c1_lidar_test/src/: main.cpp
navigation_global_path_planning_simulation/: slam_test.cpp
navigation_global_path_planning_simulation/include/: .target_planner.h.swp  kdtree_obstacles_eigen_adaptor.h  laserSimulation.h  map_manage.h  pid_tracking.h  scan_context_pca.h  scan_match.h  target_planner.h  utils.h
navigation_local_path_planning_simulation/: .slam_test.cpp.swn  slam_test.cpp
navigation_local_path_planning_simulation/include/: .dataContainer.h.swp  .target_planner.h.swo  a_star.h  apf.h  apf_process.h  data_type.h  target_planner.h  utils.h
navigation_simu/: .slam_test.cpp.swp  CMakeLists.txt  slam_test.cpp
navigation_simu/include/: .slam_process.h.swp  a_star.h  obstacles.h  slam_process.h  target_planner.h
navigation_simu/test_data/: laser_test_data.txt  laser_test_data2.txt
odometry/: .CMakeLists.txt.swp  keyboard.h  main.cpp  odometry.h  test
odometry/include/: .odometry.h.swp  data_transport.h  ekf_fusion.h  keyboard.h  odometry.h  uart.h
robot_move_base/: CMakeLists.txt  main.cpp
robot_move_base/include/cluster/: cluster.h
robot_move_base/include/common/: data_transport.h  data_type.h  time_synchronize.h  utils.h
robot_move_base/include/device/: keyboard.h
robot_move_base/include/slam/: slam_process.h
robot_navigation/: .main.cpp.swp  CMakeLists.txt  main.cpp
robot_navigation/include/common/: data_transport.h  time_synchronize.h  utils.h
robot_navigation/include/device/: keyboard.h
robot_navigation/include/odom/: odometry.h  visualize.h
robot_navigation/include/path_planner/: a_star.h
robot_navigation/include/path_tracking/: pid.h  pid_tracking.h
robot_navigation/include/slam/: slam_process.h
robot_navigation/include/target_planner/: target_planner.h
robot_navigation_global_path_planing/: CMakeLists.txt  main.cpp
robot_navigation_global_path_planing/include/common/: .time_synchronize.h.swp  EpollEvent.h  data_type.h
robot_navigation_global_path_planing/include/lidar/: lidar_drive.h
robot_navigation_global_path_planing/include/path_planner/: a_star.h  apf.h
robot_navigation_global_path_planing/include/path_tracking/: pid_tracking.h
robot_navigation_global_path_planing/include/slam/: grid_cell.h  slam_process.h
robot_navigation_global_path_planing/include/target_planner/: target_planner.h
robot_navigation_local_path_planning/: main.cpp
robot_navigation_local_path_planning/include/common/: utils.h
robot_slam/: CMakeLists.txt  main.cpp
robot_slam/include/common/: data_container.h  time_synchronize.h
robot_slam/include/device/: keyboard.h
robot_slam/include/lidar/lidar_include/: utils.h
robot_slam/include/odom/: .odometry.h.swp  EpollEvent.h  IEvent.h  odometry.h
robot_slam/include/slam/: dataContainer.h  data_type.h  grid_map_base.h  occupied_grid_map.h  slam_process.h
rtmp_stream/: CMakeLists.txt  main.cpp  main.cpp_cpy
rtmp_stream/include/: sps_decode.h
rtmp_stream/src/: image_utils.cpp  librtmp_send264.cpp
slam_simu/: CMakeLists.txt  data_transport.h  slam_test.cpp
slam_simu/include/: occupied_grid_map.h
slam_simu/src/: laserSimulation.cpp
tele_control/: CMakeLists.txt  main.cpp
tele_control/include/: IEvent.h  data_transport.h
tele_control/src/: EpollEvent.cpp
time_synchronize/: main.cpp  test  time_synchronize.h  time_synchronize.h_cpy
uart_test/: main.cpp  main.cpp_cpy  uart.h
(+15 files in other folders)
