CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(lidar_test)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

ADD_DEFINITIONS(-std=c++17)

# include directories
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/include/lidar_include
	${CMAKE_SOURCE_DIR}/src
)

# eigen
FIND_PACKAGE( Eigen3 )

# directory of eigen
INCLUDE_DIRECTORIES( ${EIGEN3_INCLUDE_DIR} )

# opencv
FIND_PACKAGE( OpenCV REQUIRED )

# directory of opencv
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# opencv link directories
LINK_DIRECTORIES( ${OpenCV_LIBRARIES_DIRS} )

# link directories
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/main.cpp)

# link 
TARGET_LINK_LIBRARIES(${PROJECT_NAME} libcspclidar_driver.a pthread)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})
