CMAKE_MINIMUM_REQUIRED( VERSION 3.16.3 )

PROJECT(robot)

SET( EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin" )

ADD_DEFINITIONS( -std=c++17 )

#find required eigen
FIND_PACKAGE( Eigen3 )

#directory of eigen headers
INCLUDE_DIRECTORIES( ${EIGEN3_INCLUDE_DIR} )

#find required opencv
FIND_PACKAGE( OpenCV REQUIRED )

#directory of opencv headers
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

INCLUDE_DIRECTORIES( 
	${CMAKE_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/src	
)

AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src src_file)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR} src_file)

#directory of opencv link libs
LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})

ADD_EXECUTABLE( ${PROJECT_NAME} ${src_file} )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} pthread )
